--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav text-uppercase">
                     <li class="nav-item"><a class="nav-link custom-link" href="#hero">Home</a></li>
                     <li class="nav-item"><a class="nav-link custom-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link custom-link" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link custom-link" href="services.html">Sessions</a></li>
                     <li class="nav-item"><a class="nav-link custom-link" href="#workshops">Workshops</a></li>
                     <li class="nav-item"><a class="nav-link custom-link" href="#gallery">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link custom-link" href="#contact">Contact</a></li>
@@ -47,7 +47,7 @@
         <div class="container">
             <h1>Explore, Express, and Embrace Creativity for Wellbeing</h1>
             <p>Holistic Art Therapy in Holyhead & Anglesey</p>
-            <a href="#services" class="btn custom-btn">Our Services</a>
+            <a href="services.html" class="btn custom-btn">Explore Our Sessions</a>
         </div>
     </section>
 
@@ -131,30 +131,6 @@
         </div>
     </section>
 
-    <!-- Meet May Section -->
-    <section id="meet-may" class="section meet-may-section">
-        <div class="container">
-            <div class="text-center mb-4">
-                <h2>Meet May Berbery Canvin</h2>
-                <p>Founder & Holistic Art Practitioner</p>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-lg-4 text-center">
-                    <img src="images/may.jpg" alt="May Berbery Canvin" class="img-fluid rounded-circle mb-3 shadow">
-                </div>
-                <div class="col-lg-8">
-                    <p>
-                        May is a dedicated HICAT (Holistic Integrated Creative Art Therapy) student based on Anglesey in North Wales. Her passion is integrating creativity and healing through all her work and mediums of expression.
-                    </p>
-                    <p>
-                        With a strong career background in listening, understanding, and responding to people’s needs, May has always had an aptitude for the creative arts and wanted to share this to help others—adults as well as youth—demonstrating her commitment to fostering wellbeing and self-expression through the arts.
-                    </p>
-                    <a href="about.html" class="btn custom-btn">Learn More About May</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Gallery Section -->
     <section id="gallery" class="section gallery-section">
         <div class="container">
@@ -215,7 +191,7 @@
             <div class="footer-links">
                 <a href="#hero">Home</a> |
                 <a href="#about">About</a> |
-                <a href="#services">Services</a> |
+                <a href="services.html">Sessions</a> |
                 <a href="#workshops">Workshops</a> |
                 <a href="#gallery">Gallery</a> |
                 <a href="#contact">Contact</a>
