--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <img src="images/about.jpg" alt="Creative Art Therapy" class="img-fluid rounded shadow">
+                    <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287077/Reduces_Stress_Anxiety_rxplzy.jpg" alt="Creative Art Therapy" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6">
                     <p>
@@ -125,7 +125,7 @@
                     <a href="workshops.html" class="btn custom-btn">View Workshops</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/workshop.jpg" alt="Art Therapy Workshop" class="img-fluid rounded shadow">
+                    <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287065/Boosts_Self-Esteem_phdab7.jpg" alt="Art Therapy Workshop" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -140,13 +140,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <img src="images/gallery1.jpg" alt="Gallery Image 1" class="img-fluid rounded shadow">
+                    <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730966434/gallery-3_hkzaqj.jpg" alt="Gallery Image 1" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-4 mb-4">
-                    <img src="images/gallery2.jpg" alt="Gallery Image 2" class="img-fluid rounded shadow">
+                    <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730966435/school-programmes_l5eln4.jpg" alt="Gallery Image 2" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-4 mb-4">
-                    <img src="images/gallery3.jpg" alt="Gallery Image 3" class="img-fluid rounded shadow">
+                    <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287074/Enhances_Self-Expression_gxvsr9.jpg" alt="Gallery Image 3" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
