--- a/services.html
+++ b/services.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Our Sessions - Wellbeing Expressions</title>
-    <meta name="description" content="Explore our holistic art therapy sessions to enhance mental well-being through creative expression at Wellbeing Expressions.">
-    <meta name="keywords" content="Art Therapy, Holistic Therapy, Mental Health, Creativity, Workshops, Wellbeing Expressions, Anglesey, UK">
+    <title>Creative Wellbeing Sessions in Holyhead and Beyond - Wellbeing Expressions</title>
+    <meta name="description" content="Join Wellbeing Expressions in Holyhead and beyond for creative wellbeing sessions that use art, music, and therapeutic expression to enhance mental health and emotional resilience.">
+    <meta name="keywords" content="Creative Wellbeing, Art Therapy in Holyhead, Mental Health Support North Wales, Corporate Wellness Holyhead, Group Therapy Workshops North Wales, One-to-One Art Therapy Anglesey">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -22,10 +22,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link custom-link" href="index.html#about-us">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link custom-link" href="index.html#meet-may">Meet May</a></li>
-                    <li class="nav-item"><a class="nav-link custom-link active" href="sessions.html">Sessions</a></li>
-                    <li class="nav-item"><a class="nav-link custom-link" href="index.html#contact">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link custom-link" href="index.html">Home</a></li>
                 </ul>
             </div>
         </div>
@@ -34,20 +31,20 @@
     <!-- Page Header -->
     <section class="page-header hero-section">
         <div class="container text-center">
-            <h1>Our Sessions</h1>
-            <p>Explore, Express, and Embrace Creativity for Wellbeing</p>
+            <h1>Our Creative Wellbeing Sessions</h1>
+            <p>Serving Holyhead and beyond with accessible, holistic wellbeing support</p>
         </div>
     </section>
 
     <!-- Sessions Section -->
     <section class="sessions py-5">
         <div class="container">
-            <h2 class="section-title text-center mb-4">Explore Our Art Therapy Sessions</h2>
-            <p class="text-center">Discover tailored sessions to foster self-expression, connection, and healing through creativity. No experience needed—just a desire to explore and grow.</p>
+            <h2 class="section-title text-center mb-4">Explore Our Holistic Sessions in Holyhead and Beyond</h2>
+            <p class="text-center">Wellbeing Expressions offers personalised and group therapy sessions that incorporate a wide range of creative approaches to support mental health and emotional well-being for clients across Holyhead, Anglesey, and beyond.</p>
 
             <!-- Discovery Call -->
             <div class="text-center mb-5">
-                <p>Not sure which session suits you best? Book a <strong>free 10-minute discovery call</strong> to discuss your needs and the ideal approach for you.</p>
+                <p>Not sure which session is best for you? Book a <strong>free 10-minute discovery call</strong> to learn about our creative wellbeing services and which approach best supports your goals.</p>
                 <a href="#contact" class="btn btn-accent mt-3">Book a Discovery Call</a>
             </div>
 
@@ -55,11 +52,11 @@
             <div class="service-item mb-5">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <img src="images/group-workshop.jpg" alt="Group Workshops" class="img-fluid rounded shadow">
+                        <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287071/Group_Workshops_pgfeim.jpg" alt="Group Workshops in Holyhead and Beyond" class="img-fluid rounded shadow">
                     </div>
                     <div class="col-md-6">
-                        <h3>Group Art Therapy Workshops</h3>
-                        <p>Our group workshops provide a supportive space to explore emotions and enhance well-being through creative expression. Ideal for friends, communities, and colleagues.</p>
+                        <h3>Group Therapy Workshops in North Wales</h3>
+                        <p>Our group workshops across North Wales provide a safe space for individuals to explore emotions and build connections through creative expression, designed for community groups and friends across Holyhead, Anglesey, and beyond.</p>
                         <ul>
                             <li><strong>Duration:</strong> 2 hours</li>
                             <li><strong>Group Size:</strong> 5-10 participants</li>
@@ -74,11 +71,11 @@
             <div class="service-item mb-5">
                 <div class="row align-items-center">
                     <div class="col-md-6 order-md-2">
-                        <img src="images/one-to-one.jpg" alt="One-to-One Sessions" class="img-fluid rounded shadow">
+                        <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287070/One-to-One_Sessions-3_vdtqk2.jpg" alt="Private One-to-One Art Therapy Anglesey" class="img-fluid rounded shadow">
                     </div>
                     <div class="col-md-6 order-md-1">
-                        <h3>One-to-One Art Therapy Sessions</h3>
-                        <p>Experience personalized art therapy, focusing on your unique needs. Explore emotions, gain insights, and foster personal growth in a private setting.</p>
+                        <h3>One-to-One Art Therapy in Anglesey</h3>
+                        <p>Our private sessions on Anglesey offer personalised support to help you process emotions, increase resilience, and foster personal growth. Ideal for those seeking one-on-one guidance in a confidential setting.</p>
                         <ul>
                             <li><strong>Duration:</strong> 1 hour</li>
                             <li><strong>Price:</strong> £30 per session</li>
@@ -92,11 +89,11 @@
             <div class="service-item mb-5">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <img src="images/corporate-workshop.jpg" alt="Corporate Workshops" class="img-fluid rounded shadow">
+                        <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287065/Corporate_Workshops_ggiofd.jpg" alt="Corporate Wellness Workshops North Wales" class="img-fluid rounded shadow">
                     </div>
                     <div class="col-md-6">
-                        <h3>Corporate Wellness Workshops</h3>
-                        <p>Engage your team with creative workshops designed to foster collaboration, reduce stress, and enhance workplace wellness. Customizable for team dynamics.</p>
+                        <h3>Corporate Wellness Workshops in North Wales</h3>
+                        <p>Enhance your team’s wellbeing with corporate wellness workshops that foster collaboration, reduce stress, and boost morale. Tailored to support employee engagement and mental health in Holyhead and North Wales workplaces.</p>
                         <ul>
                             <li><strong>Duration:</strong> Half-day or full-day</li>
                             <li><strong>Price:</strong> Starting from £500</li>
@@ -110,13 +107,13 @@
             <div class="service-item mb-5">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <img src="images/school-programme.jpg" alt="School Programmes" class="img-fluid rounded shadow">
+                        <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287075/Special_Programmes_for_Schools_w5v9f0.jpg" alt="School Art Therapy Programmes North Wales" class="img-fluid rounded shadow">
                     </div>
                     <div class="col-md-6">
-                        <h3>Art Therapy for Schools</h3>
-                        <p>Our school programmes integrate art therapy into educational settings, helping students explore emotions and improve social skills through creative expression.</p>
+                        <h3>School Art Therapy Programmes in North Wales</h3>
+                        <p>Our school-based programmes help students explore emotions, develop social skills, and foster emotional resilience. Available across primary and secondary schools in Holyhead and beyond.</p>
                         <ul>
-                            <li><strong>Duration:</strong> Customizable for individual classes or ongoing sessions</li>
+                            <li><strong>Duration:</strong> Customisable for individual or ongoing sessions</li>
                             <li><strong>Age Groups:</strong> Primary and secondary students</li>
                             <li><strong>Price:</strong> Contact us for details</li>
                         </ul>
@@ -130,8 +127,8 @@
     <!-- Contact Section -->
     <section class="contact py-5 bg-light" id="contact">
         <div class="container">
-            <h2 class="section-title text-center mb-4">Get in Touch</h2>
-            <p class="text-center">Ready to begin? Reach out to learn more or to book a session that best suits your needs.</p>
+            <h2 class="section-title text-center mb-4">Contact Wellbeing Expressions - Serving Holyhead and Beyond</h2>
+            <p class="text-center">Reach out to discover more about our holistic sessions across Holyhead, Anglesey, and beyond. We’re here to support your creative and mental wellness journey.</p>
             <form class="contact-form mt-4">
                 <div class="row mb-3">
                     <div class="col-md-6">
@@ -145,10 +142,10 @@
                     <div class="col">
                         <select class="form-control" required>
                             <option value="" disabled selected>Choose Session...</option>
-                            <option>Group Art Therapy Workshops</option>
-                            <option>One-to-One Art Therapy Sessions</option>
-                            <option>Corporate Wellness Workshops</option>
-                            <option>Art Therapy for Schools</option>
+                            <option>Group Therapy Workshops - North Wales</option>
+                            <option>One-to-One Art Therapy - Anglesey</option>
+                            <option>Corporate Wellness Workshops - North Wales</option>
+                            <option>School Programmes - North Wales</option>
                             <option>Discovery Call</option>
                         </select>
                     </div>
