--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top custom-navbar">
+    <nav class="navbar navbar-expand-lg  fixed-top custom-navbar">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="Wellbeing Expressions Logo" height="50">
@@ -58,8 +58,8 @@
                 <h2>About Wellbeing Expressions</h2>
                 <p>Helping clients express themselves and find relief through creative outlets.</p>
             </div>
-            <div class="row align-items-center">
-                <div class="col-lg-6">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 col-md-9 col-lg-6 d-flex justify-content-center align-items-center py-2">
                     <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287077/Reduces_Stress_Anxiety_rxplzy.jpg" alt="Creative Art Therapy" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6">
@@ -114,7 +114,7 @@
                 <h2>Workshops</h2>
                 <p>Creative workshops for healing and exploration.</p>
             </div>
-            <div class="row align-items-center">
+            <div class="row align-items-center d-flex justify-content-center align-items-center">
                 <div class="col-lg-6">
                     <p>
                         Our creative workshops are designed for everyone who wishes to heal any aspect of their mental, emotional, or physical well-being. Whether you want to explore your emotions or simply enjoy a creative outlet, our workshops provide the perfect environment.
@@ -122,9 +122,11 @@
                     <p>
                         We believe in creating inclusive environments that recognize and address unique challenges while promoting empowerment and dignity. By fostering compassion and enhancing accessibility, we aim to serve and uplift everyone, ensuring that all individuals can thrive.
                     </p>
-                    <a href="workshops.html" class="btn custom-btn">View Workshops</a>
+                    <div class="d-flex justify-content-center align-items-center my-2 py-2">
+                    <a href="workshops.html" class="btn custom-btn  ">View Workshops</a>
                 </div>
-                <div class="col-lg-6">
+                </div>
+                <div class="col-12 col-md-9 col-lg-6 d-flex justify-content-center align-items-center py-2">
                     <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287065/Boosts_Self-Esteem_phdab7.jpg" alt="Art Therapy Workshop" class="img-fluid rounded shadow">
                 </div>
             </div>
@@ -138,15 +140,21 @@
                 <h2>Gallery</h2>
                 <p>Explore moments from our past workshops.</p>
             </div>
-            <div class="row">
-                <div class="col-lg-4 mb-4">
-                    <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730966434/gallery-3_hkzaqj.jpg" alt="Gallery Image 1" class="img-fluid rounded shadow">
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="gallery-item">
+                        <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730966434/gallery-3_hkzaqj.jpg" alt="Gallery Image 1" class="img-fluid rounded shadow">
+                    </div>
                 </div>
-                <div class="col-lg-4 mb-4">
-                    <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730966435/school-programmes_l5eln4.jpg" alt="Gallery Image 2" class="img-fluid rounded shadow">
+                <div class=" col-md-6 col-lg-4 mb-4">
+                    <div class="gallery-item">
+                        <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730966435/school-programmes_l5eln4.jpg" alt="Gallery Image 2" class="img-fluid rounded shadow">
+                    </div>
                 </div>
-                <div class="col-lg-4 mb-4">
-                    <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287074/Enhances_Self-Expression_gxvsr9.jpg" alt="Gallery Image 3" class="img-fluid rounded shadow">
+                <div class=" col-md-6 col-lg-4 mb-4">
+                    <div class="gallery-item">
+                        <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287074/Enhances_Self-Expression_gxvsr9.jpg" alt="Gallery Image 3" class="img-fluid rounded shadow">
+                    </div>
                 </div>
             </div>
         </div>
@@ -176,7 +184,9 @@
                         <div class="mb-3">
                             <textarea name="message" rows="5" placeholder="Your Message" class="form-control" required></textarea>
                         </div>
+                        <div class="d-flex justify-content-center align-items-center my-2 py-2">
                         <button type="submit" class="btn custom-btn">Send Message</button>
+                    </div>
                     </form>
                 </div>
             </div>
@@ -186,7 +196,7 @@
     <!-- Footer -->
     <footer class="footer-section">
         <div class="container text-center">
-            <img src="images/logo-footer.png" alt="Wellbeing Expressions Logo" class="footer-logo">
+            <img src="images/logo-footer.png" alt="Wellbeing Expressions Logo" class="footer-logo mb-3">
             <p>&copy; 2024 Wellbeing Expressions. All rights reserved.</p>
             <div class="footer-links">
                 <a href="#hero">Home</a> |
