--- a/services.html
+++ b/services.html
@@ -6,24 +6,63 @@
     <meta name="description" content="Join Wellbeing Expressions in Holyhead and beyond for creative wellbeing sessions that use art, music, and therapeutic expression to enhance mental health and emotional resilience.">
     <meta name="keywords" content="Creative Wellbeing, Art Therapy in Holyhead, Mental Health Support North Wales, Corporate Wellness Holyhead, Group Therapy Workshops North Wales, One-to-One Art Therapy Anglesey">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Sanchez&display=swap" rel="stylesheet">
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="service.css">
 </head>
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg custom-navbar fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top custom-navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Wellbeing Expressions</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="Wellbeing Expressions Logo" height="50">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link custom-link" href="index.html">Home</a></li>
+                <ul class="navbar-nav text-uppercase">
+                    <li class="nav-item">
+                        <a class="nav-link custom-link" href="index.html">
+                            <i class="fa fa-home"></i> Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link custom-link" href="#group-workshops">
+                            <i class="fa fa-users"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link custom-link" href="#one-to-one">
+                            <i class="fa fa-user"></i> 
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link custom-link" href="#corporate-workshops">
+                            <i class="fa fa-briefcase"></i> 
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link custom-link" href="#school-programmes">
+                            <i class="fa fa-graduation-cap"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link custom-link" href="#contact">
+                            <i class="fa fa-envelope"></i> Contact
+                        </a>
+                    </li>
                 </ul>
+                
             </div>
         </div>
     </nav>
@@ -37,19 +76,21 @@
     </section>
 
     <!-- Sessions Section -->
-    <section class="sessions py-5">
+    <section class="section sessions-section">
         <div class="container">
-            <h2 class="section-title text-center mb-4">Explore Our Holistic Sessions in Holyhead and Beyond</h2>
-            <p class="text-center">Wellbeing Expressions offers personalised and group therapy sessions that incorporate a wide range of creative approaches to support mental health and emotional well-being for clients across Holyhead, Anglesey, and beyond.</p>
+            <div class="text-center mb-4">
+                <h2>Explore Our Holistic Sessions in Holyhead and Beyond</h2>
+                <p>Wellbeing Expressions offers personalised and group therapy sessions that incorporate a wide range of creative approaches to support mental health and emotional well-being for clients across Holyhead, Anglesey, and beyond.</p>
+            </div>
 
             <!-- Discovery Call -->
             <div class="text-center mb-5">
                 <p>Not sure which session is best for you? Book a <strong>free 10-minute discovery call</strong> to learn about our creative wellbeing services and which approach best supports your goals.</p>
-                <a href="#contact" class="btn btn-accent mt-3">Book a Discovery Call</a>
+                <a href="#contact" class="btn custom-btn mt-3">Book a Discovery Call</a>
             </div>
 
             <!-- Service 1: Group Workshops -->
-            <div class="service-item mb-5">
+            <div id="group-workshops" class="service-item mb-5">
                 <div class="row align-items-center">
                     <div class="col-md-6">
                         <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287071/Group_Workshops_pgfeim.jpg" alt="Group Workshops in Holyhead and Beyond" class="img-fluid rounded shadow">
@@ -62,13 +103,13 @@
                             <li><strong>Group Size:</strong> 5-10 participants</li>
                             <li><strong>Price:</strong> £200 - £250 per session</li>
                         </ul>
-                        <a href="#contact" class="btn btn-accent mt-3">Book a Workshop</a>
+                        <a href="#contact" class="btn custom-btn mt-3">Book a Workshop</a>
                     </div>
                 </div>
             </div>
 
             <!-- Service 2: One-to-One Sessions -->
-            <div class="service-item mb-5">
+            <div id="one-to-one" class="service-item mb-5">
                 <div class="row align-items-center">
                     <div class="col-md-6 order-md-2">
                         <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287070/One-to-One_Sessions-3_vdtqk2.jpg" alt="Private One-to-One Art Therapy Anglesey" class="img-fluid rounded shadow">
@@ -80,13 +121,13 @@
                             <li><strong>Duration:</strong> 1 hour</li>
                             <li><strong>Price:</strong> £30 per session</li>
                         </ul>
-                        <a href="#contact" class="btn btn-accent mt-3">Schedule a Session</a>
+                        <a href="#contact" class="btn custom-btn mt-3">Schedule a Session</a>
                     </div>
                 </div>
             </div>
 
             <!-- Service 3: Corporate Workshops -->
-            <div class="service-item mb-5">
+            <div id="corporate-workshops" class="service-item mb-5">
                 <div class="row align-items-center">
                     <div class="col-md-6">
                         <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287065/Corporate_Workshops_ggiofd.jpg" alt="Corporate Wellness Workshops North Wales" class="img-fluid rounded shadow">
@@ -98,13 +139,13 @@
                             <li><strong>Duration:</strong> Half-day or full-day</li>
                             <li><strong>Price:</strong> Starting from £500</li>
                         </ul>
-                        <a href="#contact" class="btn btn-accent mt-3">Enquire Now</a>
+                        <a href="#contact" class="btn custom-btn mt-3">Enquire Now</a>
                     </div>
                 </div>
             </div>
 
             <!-- Service 4: School Programmes -->
-            <div class="service-item mb-5">
+            <div id="school-programmes" class="service-item mb-5">
                 <div class="row align-items-center">
                     <div class="col-md-6">
                         <img src="https://res.cloudinary.com/dsedezvzs/image/upload/v1730287075/Special_Programmes_for_Schools_w5v9f0.jpg" alt="School Art Therapy Programmes North Wales" class="img-fluid rounded shadow">
@@ -117,7 +158,7 @@
                             <li><strong>Age Groups:</strong> Primary and secondary students</li>
                             <li><strong>Price:</strong> Contact us for details</li>
                         </ul>
-                        <a href="#contact" class="btn btn-accent mt-3">Contact for Details</a>
+                        <a href="#contact" class="btn custom-btn mt-3">Contact for Details</a>
                     </div>
                 </div>
             </div>
@@ -125,22 +166,24 @@
     </section>
 
     <!-- Contact Section -->
-    <section class="contact py-5 bg-light" id="contact">
+    <section id="contact" class="section contact-section">
         <div class="container">
-            <h2 class="section-title text-center mb-4">Contact Wellbeing Expressions - Serving Holyhead and Beyond</h2>
-            <p class="text-center">Reach out to discover more about our holistic sessions across Holyhead, Anglesey, and beyond. We’re here to support your creative and mental wellness journey.</p>
-            <form class="contact-form mt-4">
+            <div class="text-center mb-4">
+                <h2>Contact Wellbeing Expressions - Serving Holyhead and Beyond</h2>
+                <p>Reach out to discover more about our holistic sessions across Holyhead, Anglesey, and beyond. We’re here to support your creative and mental wellness journey.</p>
+            </div>
+            <form class="contact-form mt-4" action="submit_form.php" method="post">
                 <div class="row mb-3">
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" placeholder="Your Name" required>
+                    <div class="col-md-6 mb-3">
+                        <input type="text" name="name" class="form-control" placeholder="Your Name" required>
                     </div>
-                    <div class="col-md-6">
-                        <input type="email" class="form-control" placeholder="Your Email" required>
+                    <div class="col-md-6 mb-3">
+                        <input type="email" name="email" class="form-control" placeholder="Your Email" required>
                     </div>
                 </div>
                 <div class="row mb-3">
                     <div class="col">
-                        <select class="form-control" required>
+                        <select name="session" class="form-control" required>
                             <option value="" disabled selected>Choose Session...</option>
                             <option>Group Therapy Workshops - North Wales</option>
                             <option>One-to-One Art Therapy - Anglesey</option>
@@ -152,7 +195,7 @@
                 </div>
                 <div class="row mb-4">
                     <div class="col">
-                        <textarea class="form-control" rows="5" placeholder="Your Message"></textarea>
+                        <textarea name="message" class="form-control" rows="5" placeholder="Your Message"></textarea>
                     </div>
                 </div>
                 <button type="submit" class="btn custom-btn btn-lg w-100">Send Message</button>
@@ -161,11 +204,15 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer bg-dark text-light py-4">
+    <footer class="footer-section">
         <div class="container text-center">
+            <img src="images/logo-footer.png" alt="Wellbeing Expressions Logo" class="footer-logo mb-3">
             <p>&copy; 2024 Wellbeing Expressions. All rights reserved.</p>
-            <p><a href="mailto:info@wellbeingexpressions.co.uk">info@wellbeingexpressions.co.uk</a> | Phone: 01234 567890</p>
-            <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+            <div class="footer-links">
+                <a href="index.html">Home</a> |
+                <a href="#">Privacy Policy</a> |
+                <a href="#">Terms of Service</a>
+            </div>
         </div>
     </footer>
 
