--- a/services.html
+++ b/services.html
@@ -33,32 +33,32 @@
                 <ul class="navbar-nav text-uppercase">
                     <li class="nav-item">
                         <a class="nav-link custom-link" href="index.html">
-                            <i class="fa fa-home"></i> Home
+                            <i class="fa fa-home"></i> Home 
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link custom-link" href="#group-workshops">
-                            <i class="fa fa-users"></i>
+                            <i class="fa fa-users d-none d-lg-block"></i> <span class="d-block d-lg-none"> Group Workshops </span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link custom-link" href="#one-to-one">
-                            <i class="fa fa-user"></i> 
+                            <i class="fa fa-user d-none d-lg-block"></i> <span class="d-block d-lg-none"> 1-to-1 </span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link custom-link" href="#corporate-workshops">
-                            <i class="fa fa-briefcase"></i> 
+                            <i class="fa fa-briefcase d-none d-lg-block"></i> <span class="d-block d-lg-none"> Corporate Workshops </span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link custom-link" href="#school-programmes">
-                            <i class="fa fa-graduation-cap"></i>
+                            <i class="fa fa-graduation-cap d-none d-lg-block"></i> <span class="d-block d-lg-none"> School Programmes </span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link custom-link" href="#contact">
-                            <i class="fa fa-envelope"></i> Contact
+                            <i class="fa fa-envelope d-none d-lg-block"></i> Contact
                         </a>
                     </li>
                 </ul>
@@ -216,8 +216,6 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybBogGz6lvQJ6myAq+U9pN2TZkzFQ7ysh7AroexLtR4zI2ZDz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-9ndCyUaPBp1zv1tG05F6jI5zX/j9WIbtsufKmc7eg9i6aVFlJuiqztJ8ME6K6oxl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
