--- a/index.html
+++ b/index.html
@@ -82,25 +82,25 @@
                 <p>No prior art skills required. Embrace creativity as a form of self-care.</p>
             </div>
             <div class="row">
-                <div class="col-lg-4 mb-4">
+                <div class="col-md-4 col-lg-4 mb-4">
                     <div class="text-center p-4 rounded shadow service-item">
-                        <i class="fa fa-paint-brush fa-3x mb-3 custom-icon"></i>
-                        <h3>Visual Arts</h3>
+                        <img src="images/visuals-arts.jpg" class="img-fluid py-2">
+                        <h3 class="text-white">Visual Arts</h3>
                         <p>Engage in drawing, painting, and coloring activities that promote relaxation and self-expression.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-4">
+                <div class=" col-md-4 col-lg-4 mb-4">
                     <div class="text-center p-4 rounded shadow service-item">
-                        <i class="fa fa-music fa-3x mb-3 custom-icon"></i>
-                        <h3>Music & Writing</h3>
-                        <p>Explore self-expression through music and creative writing workshops.</p>
+                        <img src="images/musicandwriting.jpg" class="img-fluid py-2">
+                        <h3 class="text-white">Music & Writing</h3>
+                        <p >Explore self-expression through music and creative writing workshops.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-4">
+                <div class=" col-md-4 col-lg-4 mb-4">
                     <div class="text-center p-4 rounded shadow service-item">
-                        <i class="fa fa-hand-paper-o fa-3x mb-3 custom-icon"></i>
-                        <h3>Pottery & Sensory Activities</h3>
-                        <p>Experience the therapeutic benefits of pottery and sensory-focused activities.</p>
+                        <img src="images/potteryandsensory.jpg" class="img-fluid py-2 ">
+                        <h3 class="text-white">Pottery & Sensory Activities</h3>
+                        <p >Experience the therapeutic benefits of pottery and sensory-focused activities.</p>
                     </div>
                 </div>
             </div>
@@ -169,8 +169,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 contact-info">
-                    <p><i class="fa fa-envelope"></i> Email: <a href="mailto:info@wellbeingexpressions.co.uk">info@wellbeingexpressions.co.uk</a></p>
-                    <p><i class="fa fa-phone"></i> Phone: <a href="tel:+441234567890">01234 567 890</a></p>
+                    <p><i class="fa fa-envelope"></i> Email: <a class="text-dark text-decoration-none fw-bold" href="mailto:info@wellbeingexpressions.co.uk">info@wellbeingexpressions.co.uk</a></p>
+                    <p><i class="fa fa-phone"></i> Phone: <a  class="text-dark text-decoration-none fw-bold" href="tel:+441234567890">01234 567 890</a></p>
                     <p><i class="fa fa-map-marker"></i> Location: Holyhead & Anglesey, North Wales</p>
                 </div>
                 <div class="col-lg-6">
