--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
                 <ul class="navbar-nav text-uppercase">
                     <li class="nav-item">
                         <a class="nav-link custom-link" href="index.html">
-                            <i class="fa fa-home"></i> Home 
+                            <i class="fa fa-home d-none d-lg-block"></i> <span class="d-block d-lg-none"> Home </span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -58,7 +58,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link custom-link" href="#contact">
-                            <i class="fa fa-envelope d-none d-lg-block"></i> Contact
+                            <i class="fa fa-envelope d-none d-lg-block"></i> <span class="d-block d-lg-none"> Contact </span> 
                         </a>
                     </li>
                 </ul>
