--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Sanchez&display=swap" rel="stylesheet">
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -69,10 +71,18 @@
                     <p>
                         We offer a range of activities including visual arts, music, writing, pottery, and sensory-focused experiences designed to be relaxing and therapeutic.
                     </p>
+                    <div class="d-flex justify-content-center align-items-center my-2 py-2">
+                        <a href="services.html" class="btn custom-btn  ">Services We Provide</a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+<!-- Cookie Consent Banner -->
+<div class="cookie-consent-banner" id="cookieConsentBanner" style="display: none;">
+    <span>We use cookies to ensure you get the best experience on our website. <a href="policy.html" style="color: #fff; text-decoration: underline;">Learn more</a>.</span>
+    <button class="btn btn-warning btn-sm" onclick="acceptCookies()">Accept</button>
+</div>
 
     <!-- Services Section -->
     <section id="services" class="section services-section">
@@ -87,6 +97,9 @@
                         <img src="images/visuals-arts.jpg" class="img-fluid py-2">
                         <h3 class="text-white">Visual Arts</h3>
                         <p>Engage in drawing, painting, and coloring activities that promote relaxation and self-expression.</p>
+                        <div class="d-flex justify-content-center align-items-center my-2 py-2">
+                            <a href="services.html" class="btn custom-btn  "> Vist Our Service Page</a>
+                        </div>
                     </div>
                 </div>
                 <div class=" col-md-4 col-lg-4 mb-4">
@@ -94,6 +107,9 @@
                         <img src="images/musicandwriting.jpg" class="img-fluid py-2">
                         <h3 class="text-white">Music & Writing</h3>
                         <p >Explore self-expression through music and creative writing workshops.</p>
+                        <div class="d-flex justify-content-center align-items-center my-2 py-2">
+                            <a href="services.html" class="btn custom-btn  "> Find A Service That Suites You</a>
+                        </div>
                     </div>
                 </div>
                 <div class=" col-md-4 col-lg-4 mb-4">
@@ -101,6 +117,9 @@
                         <img src="images/potteryandsensory.jpg" class="img-fluid py-2 ">
                         <h3 class="text-white">Pottery & Sensory Activities</h3>
                         <p >Experience the therapeutic benefits of pottery and sensory-focused activities.</p>
+                        <div class="d-flex justify-content-center align-items-center my-2 py-2">
+                            <a href="services.html" class="btn custom-btn  "> Visit Our Gallery</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -123,7 +142,7 @@
                         We believe in creating inclusive environments that recognize and address unique challenges while promoting empowerment and dignity. By fostering compassion and enhancing accessibility, we aim to serve and uplift everyone, ensuring that all individuals can thrive.
                     </p>
                     <div class="d-flex justify-content-center align-items-center my-2 py-2">
-                    <a href="workshops.html" class="btn custom-btn  ">View Workshops</a>
+                    <a href="services.html" class="btn custom-btn  ">View Workshops</a>
                 </div>
                 </div>
                 <div class="col-12 col-md-9 col-lg-6 d-flex justify-content-center align-items-center py-2">
@@ -169,7 +188,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 contact-info">
-                    <p><i class="fa fa-envelope"></i> Email: <a class="text-dark text-decoration-none fw-bold" href="mailto:info@wellbeingexpressions.co.uk">info@wellbeingexpressions.co.uk</a></p>
+                    <p><i class="fa fa-envelope"></i> Email: <a class="text-dark text-decoration-none fw-bold" href="mailto:wellbeingexpression@gmail.com">wellbeingexpression@gmail.com</a></p>
                     <p><i class="fa fa-phone"></i> Phone: <a  class="text-dark text-decoration-none fw-bold" href="tel:+441234567890">01234 567 890</a></p>
                     <p><i class="fa fa-map-marker"></i> Location: Holyhead & Anglesey, North Wales</p>
                 </div>
@@ -198,18 +217,41 @@
         <div class="container text-center">
             <img src="images/logo-footer.png" alt="Wellbeing Expressions Logo" class="footer-logo mb-3">
             <p>&copy; 2024 Wellbeing Expressions. All rights reserved.</p>
+            <a href="https://www.facebook.com/relaxkidsanglesey" target="_blank">
+                <i class="fab fa-facebook"></i> Facebook Page
+            </a>
+            
             <div class="footer-links">
                 <a href="#hero">Home</a> |
                 <a href="#about">About</a> |
                 <a href="services.html">Sessions</a> |
                 <a href="#workshops">Workshops</a> |
                 <a href="#gallery">Gallery</a> |
-                <a href="#contact">Contact</a>
+                <a href="#contact">Contact</a>|
+                <a href="policy.html">Policy</a>
+            </div>
+            <div>
+                <a href="https://cleandesignuk.com/" target="_blank" class="btn ">Website By Clean Design UK</button>
             </div>
         </div>
+     
     </footer>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <!-- Cookie Consent Script -->
+<script>
+    function acceptCookies() {
+        localStorage.setItem('cookiesAccepted', 'true');
+        document.getElementById('cookieConsentBanner').style.display = 'none';
+    }
+
+    window.onload = function() {
+        if (!localStorage.getItem('cookiesAccepted')) {
+            document.getElementById('cookieConsentBanner').style.display = 'block';
+        }
+    };
+</script>
+
 </body>
 </html>
