--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Sanchez&display=swap" rel="stylesheet">
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="service.css">
 </head>
@@ -208,12 +209,19 @@
         <div class="container text-center">
             <img src="images/logo-footer.png" alt="Wellbeing Expressions Logo" class="footer-logo mb-3">
             <p>&copy; 2024 Wellbeing Expressions. All rights reserved.</p>
+            <a href="https://www.facebook.com/relaxkidsanglesey" target="_blank">
+                <i class="fab fa-facebook"></i> Facebook Page
+            </a>
             <div class="footer-links">
                 <a href="index.html">Home</a> |
-                <a href="#">Privacy Policy</a> |
+                <a href="policy.html">Policy</a> |
                 <a href="#">Terms of Service</a>
             </div>
+            <div>
+                <a href="https://cleandesignuk.com/" target="_blank" class="btn ">Website By Clean Design UK</button>
+            </div>
         </div>
+        
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
