--- a/services.html
+++ b/services.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Creative Wellbeing Sessions in Holyhead and Beyond - Wellbeing Expressions</title>
-    <meta name="description" content="Join Wellbeing Expressions in Holyhead and beyond for creative wellbeing sessions that use art, music, and therapeutic expression to enhance mental health and emotional resilience.">
+    <title>Creative Wellbeing Sessions in Holyhead and Beyond - Wellbeing Expression</title>
+    <meta name="description" content="Join Wellbeing Expression in Holyhead and beyond for creative wellbeing sessions that use art, music, and therapeutic expression to enhance mental health and emotional resilience.">
     <meta name="keywords" content="Creative Wellbeing, Art Therapy in Holyhead, Mental Health Support North Wales, Corporate Wellness Holyhead, Group Therapy Workshops North Wales, One-to-One Art Therapy Anglesey">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top custom-navbar">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Wellbeing Expressions Logo" height="50">
+                <img src="images/logo.png" alt="Wellbeing Expression Logo" height="50">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="text-center mb-4">
                 <h2>Explore Our Holistic Sessions in Holyhead and Beyond</h2>
-                <p>Wellbeing Expressions offers personalised and group therapy sessions that incorporate a wide range of creative approaches to support mental health and emotional well-being for clients across Holyhead, Anglesey, and beyond.</p>
+                <p>Wellbeing Expression offers personalised and group therapy sessions that incorporate a wide range of creative approaches to support mental health and emotional well-being for clients across Holyhead, Anglesey, and beyond.</p>
             </div>
 
             <!-- Discovery Call -->
@@ -170,7 +170,7 @@
     <section id="contact" class="section contact-section">
         <div class="container">
             <div class="text-center mb-4">
-                <h2>Contact Wellbeing Expressions - Serving Holyhead and Beyond</h2>
+                <h2>Contact Wellbeing Expression - Serving Holyhead and Beyond</h2>
                 <p>Reach out to discover more about our holistic sessions across Holyhead, Anglesey, and beyond. We’re here to support your creative and mental wellness journey.</p>
             </div>
             <form class="contact-form mt-4" action="submit_form.php" method="post">
@@ -207,8 +207,8 @@
     <!-- Footer -->
     <footer class="footer-section">
         <div class="container text-center">
-            <img src="images/logo-footer.png" alt="Wellbeing Expressions Logo" class="footer-logo mb-3">
-            <p>&copy; 2024 Wellbeing Expressions. All rights reserved.</p>
+            <img src="images/logo-footer.png" alt="Wellbeing Expression Logo" class="footer-logo mb-3">
+            <p>&copy; 2024 Wellbeing Expression. All rights reserved.</p>
             <a href="https://www.facebook.com/relaxkidsanglesey" target="_blank">
                 <i class="fab fa-facebook"></i> Facebook Page
             </a>
