--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Wellbeing Expressions - Holistic Art Therapy in Holyhead & Anglesey</title>
-    <meta name="description" content="Discover healing through creative expression with Wellbeing Expressions. We offer holistic art therapy sessions to enhance your mental well-being.">
+    <title>Wellbeing Expression - Holistic Art Therapy in Holyhead & Anglesey</title>
+    <meta name="description" content="Discover healing through creative expression with Wellbeing Expression. We offer holistic art therapy sessions to enhance your mental well-being.">
     <meta name="keywords" content="Holistic Art Therapy, Well-being, Creative Expression, Mental Health, Holyhead, Anglesey, UK, Workshops, Healing, Creativity, Self-care">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg  fixed-top custom-navbar">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="Wellbeing Expressions Logo" height="50">
+                <img src="images/logo.png" alt="Wellbeing Expression Logo" height="50">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
     <section id="about" class="section about-section">
         <div class="container">
             <div class="text-center mb-4">
-                <h2>About Wellbeing Expressions</h2>
+                <h2>About Wellbeing Expression</h2>
                 <p>Helping clients express themselves and find relief through creative outlets.</p>
             </div>
             <div class="row align-items-center justify-content-center">
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-lg-6">
                     <p>
-                        At Wellbeing Expressions, we provide a safe, welcoming space where individuals can engage in various forms of creativity for well-being and mental health. Our sessions focus on creativity without the need for prior skills or expectations.
+                        At Wellbeing Expression, we provide a safe, welcoming space where individuals can engage in various forms of creativity for well-being and mental health. Our sessions focus on creativity without the need for prior skills or expectations.
                     </p>
                     <p>
                         We offer a range of activities including visual arts, music, writing, pottery, and sensory-focused experiences designed to be relaxing and therapeutic.
@@ -215,8 +215,8 @@
     <!-- Footer -->
     <footer class="footer-section">
         <div class="container text-center">
-            <img src="images/logo-footer.png" alt="Wellbeing Expressions Logo" class="footer-logo mb-3">
-            <p>&copy; 2024 Wellbeing Expressions. All rights reserved.</p>
+            <img src="images/logo-footer.png" alt="Wellbeing Expression Logo" class="footer-logo mb-3">
+            <p>&copy; 2024 Wellbeing Expression. All rights reserved.</p>
             <a href="https://www.facebook.com/relaxkidsanglesey" target="_blank">
                 <i class="fab fa-facebook"></i> Facebook Page
             </a>
