--- a/policy.html
+++ b/policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy & Terms of Service - Wellbeing Expressions</title>
+    <title>Privacy Policy & Terms of Service - Wellbeing Expression</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Sanchez&display=swap" rel="stylesheet">
@@ -14,8 +14,8 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Wellbeing Expressions Logo">
-        <h1>Wellbeing Expressions</h1>
+        <img src="logo.png" alt="Wellbeing Expression Logo">
+        <h1>Wellbeing Expression</h1>
         <p>Contact us at <a href="mailto:wellbeingexpression@gmail.com">wellbeingexpression@gmail.com</a> or call +44 7367 292269</p>
         <a class="nav-link custom-link" href="index.html">
             <i class="fa fa-home "></i>  Home 
@@ -38,7 +38,7 @@
         <h2>Privacy Policy</h2>
         <p><strong>Effective Date:</strong> 04 November 2024</p>
         <h3>1. Introduction</h3>
-        <p>Welcome to Wellbeing Expressions. We are committed to protecting your personal information and respecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your information when you visit our website or engage our services.</p>
+        <p>Welcome to Wellbeing Expression. We are committed to protecting your personal information and respecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your information when you visit our website or engage our services.</p>
 
         <h3>2. Information We Collect</h3>
         <h4>2.1 Personal Information</h4>
@@ -121,7 +121,7 @@
         <h2>Terms of Service</h2>
         <p><strong>Effective Date:</strong> 04 November 2024</p>
         <h3>1. Acceptance of Terms</h3>
-        <p>By accessing and using the services of Wellbeing Expressions, you agree to comply with these Terms of Service. If you do not agree, please refrain from using our services.</p>
+        <p>By accessing and using the services of Wellbeing Expression, you agree to comply with these Terms of Service. If you do not agree, please refrain from using our services.</p>
 
         <h3>2. User Responsibilities</h3>
         <p>Users agree to:</p>
@@ -133,13 +133,13 @@
         </ul>
 
         <h3>3. Intellectual Property Rights</h3>
-        <p>All content provided on our website and through our services is the property of Wellbeing Expressions unless otherwise stated. Unauthorised use, reproduction, or distribution is prohibited.</p>
+        <p>All content provided on our website and through our services is the property of Wellbeing Expression unless otherwise stated. Unauthorised use, reproduction, or distribution is prohibited.</p>
 
         <h3>4. Payment Terms</h3>
         <p>Payment details will be outlined in individual service agreements. Invoices are due upon receipt unless otherwise specified. Late payments may incur interest charges as per the agreement.</p>
 
         <h3>5. Limitation of Liability</h3>
-        <p>Wellbeing Expressions shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising out of or related to your use of our services.</p>
+        <p>Wellbeing Expression shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising out of or related to your use of our services.</p>
 
         <h3>6. Disclaimers</h3>
         <p>Our services are provided on an "as-is" and "as-available" basis. We make no warranties, express or implied, regarding the reliability or availability of our services.</p>
@@ -162,7 +162,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Wellbeing Expressions. All rights reserved.</p>
+        <p>&copy; 2024 Wellbeing Expression. All rights reserved.</p>
         <a class="nav-link custom-link" href="index.html">
             <i class="fa fa-home "></i>  Home 
         </a>
