--- a/services.html
+++ b/services.html
@@ -214,8 +214,8 @@
             </a>
             <div class="footer-links">
                 <a href="index.html">Home</a> |
-                <a href="policy.html">Policy</a> |
-                <a href="#">Terms of Service</a>
+                <a href="policy.html">Policy</a> 
+                
             </div>
             <div>
                 <a href="https://cleandesignuk.com/" target="_blank" class="btn ">Website By Clean Design UK</button>
