--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <h3 class="text-white">Visual Arts</h3>
                         <p>Engage in drawing, painting, and coloring activities that promote relaxation and self-expression.</p>
                         <div class="d-flex justify-content-center align-items-center my-2 py-2">
-                            <a href="services.html" class="btn custom-btn  "> Vist Our Service Page</a>
+                            <a href="services.html" class="btn custom-btn  "> Visit Our Service Page</a>
                         </div>
                     </div>
                 </div>
