--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
             <a class="navbar-brand" href="index.html">
                 <img src="images/wellbeingexpressionlogo.webp" alt="Wellbeing Expression Logo" class="rounded " style="height:40px; border:1px solid black;"> 
             </a>
-            <div class="lead">Wellbeing Expression</div>
+            <div class="heading-nav">Wellbeing Expression</div>
             <button class="navbar-toggler mx-auto  d-flex justify-self-center align-items-center d-md-block d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
