--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Wellbeing Expression - Holistic Art Therapy in Holyhead & Anglesey</title>
+    <title>Wellbeing Expression - Holistic Art Therapy in Gwynedd & Anglesey</title>
     <meta name="description" content="Discover healing through creative expression with Wellbeing Expression. We offer holistic art therapy sessions to enhance your mental well-being.">
     <meta name="keywords" content="Holistic Art Therapy, Well-being, Creative Expression, Mental Health, Holyhead, Anglesey, UK, Workshops, Healing, Creativity, Self-care">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,7 +49,7 @@
     <section id="hero" class="text-center text-light d-flex align-items-center hero-section">
         <div class="container">
             <h1>Explore, Express, and Embrace Creativity for Wellbeing</h1>
-            <p>Holistic Art Therapy in Holyhead & Anglesey</p>
+            <p>Holistic Art Therapy in Gwynedd & Anglesey</p>
             <a href="services.html" class="btn custom-btn">Explore Our Sessions</a>
         </div>
     </section>
@@ -208,7 +208,7 @@
                 <div class="col-lg-6 contact-info">
                     <p><i class="fa fa-envelope"></i> Email: <a class="text-dark text-decoration-none fw-bold" href="mailto:wellbeingexpression@gmail.com">wellbeingexpression@gmail.com</a></p>
                     <p><i class="fa fa-phone"></i> Phone: <a  class="text-dark text-decoration-none fw-bold" href="tel:+441234567890">01234 567 890</a></p>
-                    <p><i class="fa fa-map-marker"></i> Location: Holyhead & Anglesey, North Wales</p>
+                    <p><i class="fa fa-map-marker"></i> Location: Gwynedd & Anglesey, North Wales</p>
                 </div>
                 <div class="col-lg-6">
                     <form id="contact-form" action="https://api.web3forms.com/submit" method="POST">
